--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ lazyload:
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
 - type: git
-  repository: https://github.com/liunaijie/liunaijie.github.io.git
+  repository: git@github.com:liunaijie/liunaijie.github.io.git
 
 # Rss
 feed:
