test git status

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,7 +30,16 @@ jobs:
           npm install hexo-cli -g
           npm install
           npm install hexo-auto-category --save
-          git status
+      - name: Push update
+        run : |
+          remote_repo="https://${GITHUB_ACTOR}:${{secrets.GITHUB_TOKEN}}@github.com/${GITHUB_REPOSITORY}.git"
+          if [ -z "$(git status --porcelain)" ]
+          then
+              echo "nothing to update."
+          else
+              git commit -m "triggle by commit ${{ github.sha }}. created by ${{ github.workflow }}." -a
+              git push "${remote_repo}" HEAD:master
+          fi          
       - name: Hexo deploy
         run: |
           hexo clean
