--- a/themes/Hacker/_config.yml
+++ b/themes/Hacker/_config.yml
@@ -33,3 +33,12 @@ googleTrackId: 139152590
 
 # whether to show read more button when showing article in excerpt in main page
 read_more: true
+
+
+math:
+  mathjax:
+    enable: true
+    # Next v6.3.0 后的版本 tags 要设置成 ams
+    # Available values: none | ams | all
+    tags: ams
+
