update files on 2024-11-24

--- a/_config.yml
+++ b/_config.yml
@@ -95,8 +95,8 @@ ignore:
 plugins:
     hexo-generator-feed
 ## Themes: https://hexo.io/themes/
-theme: maple
-#theme: minima
+#theme: maple
+theme: minima
 
 lazyload:
   enable: true 
