update files on 2024-11-24

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node - version: stable
+      - name: Install git lib 
+        run: npm install hexo-deployer-git --save          
       - name: Verify Node.js version
         run: node - v   
       - name: Setup hexo
